--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -97,3 +97,34 @@
   year={2015},
   publisher={Nature Publishing Group}
 }
+@article{keck2011cell,
+  title={A cell cycle phosphoproteome of the yeast centrosome},
+  author={Keck, Jamie M and Jones, Michele H and Wong, Catherine CL and Binkley, Jonathan and Chen, Daici and Jaspersen, Sue L and Holinger, Eric P and Xu, Tao and Niepel, Mario and Rout, Michael P and others},
+  journal={Science},
+  volume={332},
+  number={6037},
+  pages={1557--1561},
+  year={2011},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{vogel2000carboxy,
+  title={The carboxy terminus of Tub4p is required for gamma-tubulin function in budding yeast},
+  author={Vogel, Jacalyn and Snyder, Michael},
+  journal={Journal of cell Science},
+  volume={113},
+  number={21},
+  pages={3871--3882},
+  year={2000},
+  publisher={The Company of Biologists Ltd}
+}
+@article{vogel2001phosphorylation,
+  title={Phosphorylation of $\gamma$-tubulin regulates microtubule organization in budding yeast},
+  author={Vogel, Jacalyn and Drapkin, Ben and Oomen, Jamina and Beach, Dale and Bloom, Kerry and Snyder, Michael},
+  journal={Developmental cell},
+  volume={1},
+  number={5},
+  pages={621--631},
+  year={2001},
+  publisher={Elsevier}
+}
