--- a/introduction.tex
+++ b/introduction.tex
@@ -51,13 +51,13 @@ In this section we will address the role of IDPs in controlling the function of 
 
 \subsection{Microtubules}
 
-Microtubules are constructed of alternating pairs, or dimers, of the globular proteins $\alpha$ and $\beta$ Tubulin. A cylindrical arrangement of tubulin dimers results in the formation of a rigid tube-like structure known as a microtubule. By growing, or polymerizing, and shrinking, depolymerizing, microtubules can effect force on a target. Microtubules are involved in a number of other functions, such as serving as roadways along which transport molecules can carry cargo, and forming the structural backbone of the cell. The spontaneous assembly of tubulin dimers in solution into a microtubule is heavily disfavoured. However, when free floating tubulins encounter pre-formed ring of tubulin molecules, the growth of a microtubule is greatly facilitated. In cells, this template is known as the $\gamma$-Tubulin Ring Complex ($\gamma$-TuRC) which is a ring-like structure of $\gamma$-Tubulin molecules held together by various other proteins known as $\gamma$-tubulin ring proteins (GRIPs). $\gamma$ tubulin shares a similar structure to $\alpha$ and $\beta$ tubulin and have been shown to act as nucleation templates for microtubules. Furthermore, structural rearrangements of the $\gamma$-TuRC have been shown to either facilitate and inhibit nucleation. 
+Microtubules are constructed of alternating pairs, or dimers, of the globular proteins $\alpha$ and $\beta$ Tubulin. A cylindrical arrangement of tubulin dimers results in the formation of a rigid tube-like structure known as a microtubule. By growing, or polymerizing, and shrinking, depolymerizing, microtubules can effect force on a target. Microtubules are involved in a number of other functions, such as serving as roadways along which transport molecules can carry cargo, and forming the structural backbone of the cell. The spontaneous assembly of tubulin dimers in solution into a microtubule is heavily disfavoured. However, when free floating tubulins encounter pre-formed ring of tubulin molecules, the growth of a microtubule is greatly facilitated. In cells, this template is known as the $\gamma$-Tubulin Ring Complex ($\gamma$-TuRC) which is a ring-like assembly of $\gamma$-Tubulin molecules held together by various other proteins known as $\gamma$-tubulin ring proteins (GRIPs). $\gamma$ tubulin shares a similar structure to $\alpha$ and $\beta$ tubulin and have been shown to act as nucleation templates for microtubules. Furthermore, structural rearrangements of the $\gamma$-TuRC have been shown to either facilitate and inhibit nucleation. 
 
 \subsection{$\gamma$-Tubulin \& the $\gamma$-CT}
 
 For many years, microtubule nucleation was thought to be the sole function of $\gamma$ tubulin. However, in 2001, a mass spectrometry study of the yeast $\gamma$-Tubulin showed that the protein is phosphorylated {\it in vivo} at 8 sites. Several functional studies following up on the finding that $\gamma$-tubulin is regulated show that mutations altering phosphorylation sites, all of which lie in IDRs, have consequences on the organization and stability of microtubules but no effect on their nucleation.  
 
-One of the best studied phosphorylation sites in $\gamma$-Tubulin is the heavily conserved Tyrosine (Y) 445 which lies in the disordered carboxyl terminal tail of $\gamma$-Tubulin (\gct).  The \gct{} is defined as the final 35 residues in the C-terminal portion of $\gamma$-Tubulin, which lie outside of the folded globular domain. Substitution of an Aspartic Acid (D) residue in the place of Y445, making the Y445D mutant, results in slow growing cells with unstable and misaligned mitotic spindles. The aspartic acid substitution is used as a controllable means for recreating the electrostatic environment of a phosphate group by introducing a negative charge. These findings suggest that $\gamma$-Tubulin is playing a role outside of its canonical function of nucleation and is coordinating the dynamics of the mitotic spindle. The coupling of post-translational modifications (PTMs) to the C-terminal tails of tubulins has been described in the $\gamma$-tubulin orthologues $\alpha$ and $\beta$ tubulin. Specific combinations of PTMs on the tubulin tails act as a \lq tubulin code\rq for recruiting motor proteins and microtubule associated proteins to the microtubule lattice. A similar code has not yet been described for $\gamma$-Tubulin.  While the functional importance of phosphorylation and IDRs in $\gamma$-Tubulin is becoming increasingly clear, the physical mechanisms by which local modifications at IDRs can have global impacts on the large molecular machine remain unstudied. 
+One of the best studied phosphorylation sites in $\gamma$-Tubulin is the heavily conserved Tyrosine (Y) 445 which lies in the disordered carboxyl terminal tail of $\gamma$-Tubulin (\gct).  The \gct{} is defined as the final 35 residues in the C-terminal portion of $\gamma$-Tubulin, which lie outside of the folded globular domain, and has been shown to be essential for survival in {\it S. cerevisiae} ~\cite{vogel2000carboxy}. Substitution of an Aspartic Acid (D) residue in the place of Y445, making the Y445D mutant, results in slow growing cells with unstable and misaligned mitotic spindles ~\cite{vogel2001phosphorylation}. The aspartic acid substitution is used as a controllable means for recreating the electrostatic environment of a phosphate group by introducing a negative charge. These findings suggest that $\gamma$-Tubulin is playing a role outside of its canonical function of nucleation and is coordinating the dynamics of the mitotic spindle. However, very little is known about the interactions and physical mechanisms that phosphorylation at Y445 affect. The coupling of post-translational modifications (PTMs) to the C-terminal tails of tubulins has been described in the $\gamma$-tubulin orthologues $\alpha$ and $\beta$ tubulin. Specific combinations of PTMs on the tubulin tails act as a \lq tubulin code\rq for recruiting motor proteins and microtubule associated proteins to the microtubule lattice. \todo{a bit more on beta tubulin}A similar code has not yet been described for $\gamma$-Tubulin.  While the functional importance of phosphorylation and IDRs in $\gamma$-Tubulin is becoming increasingly clear, the physical mechanisms by which local modifications at IDRs can have global impacts on the large molecular machine remain unstudied. 
  
  \section{Experimental question}
  
