--- a/methods.tex
+++ b/methods.tex
@@ -77,7 +77,7 @@ The radius of gyration is a measure of a structure's compactness. To obtain the 
 R_g(\vek{r}) = \sqrt{N^{-1} \sum_{k=1}^{N} (\vek{r_k} - \vek{r_{mean}})^2}
 \end{equation}
 
-\subsection{Diffusion coefficient}
+\subsection{Diffusion coefficient and Hydrodynamic Radius}
 
 Like radius of gyration, diffusion coefficient is a proxy for the compactness of a macromolecule. Unlike radius of gyration, diffusion coefficient can be measured through NMR spectroscopy and thus allows us to make direct comparisons between simulation trajectories and experimental values. The translational diffusion coefficeint of a macromolecule is defined as the rate at which its center of mass is able to diffuse through a solvent of given viscosity under a certain hydrodynamic model. Conformations with high diffusion rates experience rapid displacement of their center of mass, while conformations with greater friction force with the solvent experience reduced diffusion coefficients. 
 
@@ -87,12 +87,19 @@ The process of computing the translational diffusion coefficient for a particula
 \vek{D_{t}} = k_BT\Xi_{t}^{-1}
 \end{equation}
 
-The trace of the translational diffusoin tensor is invariant regardless of the molecule's orientation and is thus used to define the translational diffusion coefficient $D_t$.
+Where $k_B$ is the Boltzmann constant (\SI{1.380e-23}{\square\metre\kilo\gram\per\square\second\per\kelvin}) and T is the temperature in Kelvin. The trace of the translational diffusoin tensor is invariant regardless of the molecule's orientation and is thus used to define the translational diffusion coefficient $D_t$.
 
 \begin{equation}
 D_t = \frac{1}{3}tr(\vek{D_t})
 \end{equation}
 
+Knowing \diffusion, we can use the Stokes-Einstein equation to obtain an expression for the effective hydrodynamic radius which measures the diffusion of spherical particles.
+
+\begin{equation}
+r = \frac{k_{B}T}{6\pi \eta D_{t}}
+\end{equation}
+
+Where r is the hydrodynamic radius and $\eta$ is the viscosity of the solvent.
 
 \subsection{Covariance Analysis}
 
@@ -131,20 +138,5 @@ d = \sqrt{tr((\sqrt{C_1} - \sqrt{C_2}))^2}
 \begin{equation}
 \text{normalized overlap} (C_1, C_2) = 1 - \frac{d}{\sqrt{tr(C_1) + tr(C_2)}}
 \end{equation}
-
-
-
-
-
-
-
-
-
-
-
-
-\todo{define Rg, Dc, RMSD, contact maps}
-
-\subsection{MD Alternatives}
 
 
