--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -88,7 +88,7 @@ Although both forms of the \gct primarily occupy collapsed and disordered confor
 	\centering     %%% not \center
 	\subfigure[\diffusion over simulation time]{\label{fig:a}\includegraphics[height=0.35\textheight]{dc_ts}}
 	\subfigure[Representative structures]{\label{fig:b}\includegraphics[height=0.3\textheight]{dc_strucs}}
-	\FigureCaption{Secondary structure assignments}
+	\FigureCaption{Time-series plot of \diffusion over \SI{2}{\us} simulation.}
 	\label{fig:dctime}
 \end{figure}
 
@@ -99,32 +99,19 @@ In order to visualize a non-overlapping subset of conformations to represent ext
 
 \begin{figure}
 \centering     %%% not \center
-\subfigure[Figure A]{\label{fig:wt_contacts}\includegraphics[width=0.49\textwidth]{wt_contacts}}
-\subfigure[Figure B]{\label{fig:yd_contacts}\includegraphics[width=0.49\textwidth]{yd_contacts}}
-\subfigure[Figure C]{\label{fig:representatives}\includegraphics[width=0.49\textwidth]{representatives}}
+\subfigure[Figure A]{\label{fig:wt_contacts}\includegraphics[height=0.35\textheight]{wt_contacts}}
+\subfigure[Figure B]{\label{fig:yd_contacts}\includegraphics[height=0.35\textheight]{yd_contacts}}
+\subfigure[Figure C]{\label{fig:representatives}\includegraphics[height=0.35\textheight]{representatives}}
 \FigureCaption{Distribution of diffusion coefficients}
 \label{fig:contacts}
 \end{figure}
 
 
-
-
-\begin{figure}
-\centering     %%% not \center
-\subfigure[Figure A]{\label{fig:a}\includegraphics[width=0.7\textwidth]{glob_overlay}}
-\subfigure[Figure B]{\label{fig:b}\includegraphics[width=0.7\textwidth]{consensus}}
-\end{figure}
-
 \subsection{Collective motions correspond to transitions between extended and collapsed conformations}
 
-Until this point, we have identified the presence of an extended sub-population of the YD \gct that is absent in the WT. This lends support to the hypothesis that the shift in \diffusion measured by NMR is due to transient expansions of the YD backbone into an extended state. Complementary to this finding, is the fact that residues in the YD polypeptide show evidence of collective motions detected as shifts in chemical environment through NMR \todo{r2 figure appendix} which suggest that the transition between states occurs in a coordinated manner. We therefore seek to test whether correlated motions are also present in the simulation, and if they are, whether they can explain the transitions between collapsed and extended states.
+Until this point, we have identified the presence of an extended sub-population of the YD \gct that is absent in the WT. This lends support to the hypothesis that the shift in \diffusion measured by NMR is due to transient expansions of the YD backbone into an extended state. Complementary to this finding, is the fact that residues in the YD polypeptide show evidence of collective motions detected as shifts in chemical environment through NMR. \todo{r2 figure appendix} This suggests that the transition between states occurs in a coordinated manner. We therefore seek to test whether correlated motions are also present in the simulation, and if they are, whether they can explain the transitions between collapsed and extended states.
 
-We performed covariance analysis, also known as Principal Component Analysis on \gct trajectories to identify major axes of correlated motion. We use \texttt{covar} and \texttt{anaeig} from the \texttt{GROMACS} package to build a covariance matrix for backbone atoms to extract principal modes and perform eigenvector projections. In order to eliminate rotational and diffusive \todo{look this up} translations we align all frames in the trajectory to the average structure as computed by \texttt{covar} using RMSD based clustering. As is typical with molecular simulations which operate on a limited number of degrees of freedom, the first few eigenvectors in both trajectories account for nearly all of the variation in the trajectories \figref{fig:eigenvalues}. We therefore focus our attention on the two first major modes of motion. \todo{time plot of projections in major components}. \figref{fig:pca} shows a 2 dimensional projection onto the first two eigenvalues of WT and YD trajectories. Each point represents a 3D conformation in the \SI{2}{\us} simulation projected along the first two eigenvectors. The WT projection shows a conformational space that is closely clustered, indicative of constrained motions which is consistent with the low dispersions found in NMR and the single state behaviour suggested by RMSD and \diffusion analysis. However, the YD appears to be exploring  multiple conformation clusters which is in agreement with the presence of high dispersion groups found in NMR. Furthermore, by coloring each conformation with a normalized \diffusion value we are able to show that correlated motions along the major modes correspond with transitions between collapsed and extended states. In order to visualize the transitions, we generate a porcupine plot depicting the direction of motion between conformations on two extremes of the second principal component projections \figref{fig:porcupine}.  We show that the transition between collapsed and extended is indeed driven by a separation of the N and C terminus in a correlated fashion. \todo{cosine content} With this analysis we are able to propose a physical mechanism to explain the concerted global dynamics and diffusion coefficient shift observed in NMR as the action of correlated motions brought about by a local change in electrostatic environment. This physical mechanism would be the first example of an organized regulatory switch that does not count on disorder-order transitions but rather remains in the disordered ensemble. 
-
-%When choosing which component to use for the visualization we computed cosine content values of each projection. This has been shown to be an effective method for detecting the presence of diffusion in signals from trajectories which often dominate the first few eigenvectors. The only component with significantly high cosine content was the first principal component of the YD simulation and so we focus our attention on projections along the second component.
-
-
-
+We performed covariance analysis, also known as Principal Component Analysis on \gct trajectories to identify major modes of correlated motion in our trajectories. We use \texttt{covar} and \texttt{anaeig} from the \texttt{GROMACS} package to build a backbone atom covariance matrix, extract principal modes, and perform dimensionality reductions through eigenvector projections. In order to eliminate rotational and diffusive \todo{look this up} translations which do not correspond to conformational motions, we align all frames in the trajectory to the average structure as computed by \texttt{covar} using RMSD based clustering. As is typical with molecular simulations which operate on a limited number of degrees of freedom, the first few eigenvectors in both trajectories account for nearly all of the variation in the trajectories \figref{fig:eigenvalues}. 
 
 \begin{figure}
 \centering
@@ -133,6 +120,8 @@ We performed covariance analysis, also known as Principal Component Analysis on 
 	\label{fig:eigenvalues}
 \end{figure}
 \todo{add 3 PC component projection}
+
+We therefore focus our attention on the two first major modes of motion. \todo{time plot of projections in major components}. \figref{fig:pca} shows a 2 dimensional projection onto the first two eigenvalues of WT and YD trajectories. Each point represents a 3D conformation in the \SI{2}{\us} simulation projected along the first two eigenvectors. The WT projection shows a conformational space that is closely clustered, indicative of constrained motions consistent with the low dispersions found in NMR, and the single state behaviour suggested by RMSD and \diffusion analysis. However, the YD appears to be exploring  multiple conformation clusters which is in agreement with the presence of high dispersion groups found in NMR. Furthermore, by coloring each conformation with a normalized \diffusion value we are able to show that correlated motions along the major modes correspond with transitions between collapsed and extended states. 
 
 \begin{figure}
 	\thispagestyle{empty}
@@ -144,8 +133,9 @@ We performed covariance analysis, also known as Principal Component Analysis on 
 	\label{fig:pca}
 \end{figure}
 
+In order to visualize the transitions, we generate a porcupine plot depicting the direction of motion between conformations on two extremes of the second principal component projection \figref{fig:porcupine}.  We show that the transition between collapsed and extended is indeed driven by a separation of the N and C terminus in a correlated fashion. \todo{cosine content} With this analysis we are able to propose a physical mechanism to explain the concerted global dynamics and diffusion coefficient shift observed in NMR as the action of correlated motions brought about by a local change in electrostatic environment. 
 
-
+%When choosing which component to use for the visualization we computed cosine content values of each projection. This has been shown to be an effective method for detecting the presence of diffusion in signals from trajectories which often dominate the first few eigenvectors. The only component with significantly high cosine content was the first principal component of the YD simulation and so we focus our attention on projections along the second component.
 
 \begin{figure}
 \includegraphics[height=0.4\textheight]{yd_porcupine}
@@ -153,14 +143,30 @@ We performed covariance analysis, also known as Principal Component Analysis on 
 \label{fig:porcupine}
 \end{figure}  
 
-
+\todo{START HERE}
 \subsection{Whole protein simulations and conserved properties of \gct}
 
-Our experimental analysis of the structural properties of the \gct using NMR and corresponding MDS are based on the properties of the WT and Y445D \gct polypeptides in isolation. In order to determine whether the conformations and dynamics we observed for the isolated ??CTs are physically consistent within the context of the full-length \tub protein, we docked the min-imum Ds \gct model (Fig. S9) onto the globular domain of an S.c. ?-tubulin homology model and used this as an initial structure for whole protein simulations on $\gamma$?tubulin. Due to the increase in system size, simulation times were reduced to 200ns.  As with the Y445D \gct polypeptide, the \gct in the whole protein simula-tion underwent exchange between extended and compact confor-mations (Fig. S10), suggesting both states are accessible in the presence of the globular domain. We found no contacts between residues in the globular domain with the 39 residues of the \gct throughout the 200 ns simulation (minimal distance between any pair of residues is > 0.7 nm). Structures for the full protein with the \gct at minimum radius of gyration (1.073 nm; model S11) and maximum radius of gyration (1.582 nm; model S12) are shown in Fig. 9A.
+Our experimental analysis of the structural properties of the \gct using NMR and corresponding MDS are based on the properties of the WT and Y445D \gct polypeptides in isolation. In order to determine whether the conformations and dynamics we observed for the isolated \gct are physically consistent within the context of the full-length \tub protein, we docked the minimum \diffusion \gct model \figref{fig:globular} onto the globular domain of an S.c. \tub homology model and used it as an initial structure for whole protein simulations on \tub. Due to the substantial increase in system size, simulation times were reduced to 200ns.  As with the Y445D \gct polypeptide, the \gct in the whole protein simulation underwent exchange between extended and compact conformations \figref{fig:globular}, suggesting both states are still accessible in the presence of the globular domain. We found no contacts between residues in the globular domain with the 39 residues of the \gct throughout the 200 ns simulation (minimal distance between any pair of residues is > 0.7 nm) \todo{glob contact maps}. Structures for the full protein with the \gct at minimum radius of gyration (1.073 nm; model S11) and maximum radius of gyration (1.582 nm) are shown in Fig. 9A.
+
+
+\begin{figure}
+\centering     %%% not \center
+\includegraphics[width=0.7\textwidth]{glob_overlay}
+\FigureCaption{Full protein simulation of \tub}{}
+\label{fig:globular}
+\end{figure}
+
+
 
 
 The CTs of $\alpha$- $\beta$- and \tub are enriched in acidic residues (Asp, Glu). \gct s across eukaryotes additionally contain clusters of hydrophobic or polar residues which are not found in $\alpha$- or $\beta$-CTs. Interestingly, the residues most broadened in Y445D NMR spectra, i.e. those most affected by the compact-to-extended transition (V15, D19, E20, A32, G34), are all found in positions conserved either on a sequence level or on a physical property level (polarity/charge) in a consensus \gct sequence(Fig. 9B). This suggests that clusters of hydrophobic residues, including those that contribute to transitions between compact and extended confor-mations in the S.c. D11 \gct, are a feature of an otherwise diverse set of \gct s across many eukaryotic organisms.
 
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth]{consensus}
+\FigureCaption{Multiple Sequence Alinment of \gct across eukaryotes}{}
+\label{fig:alignment}
+\end{figure}
 
 \section{Discussion}
 
