--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -18,16 +18,6 @@
   year={2000},
   publisher={Elsevier}
 }
-@article{wilkins1999hydrodynamic,
-  title={Hydrodynamic radii of native and denatured proteins measured by pulse field gradient NMR techniques},
-  author={Wilkins, Deborah K and Grimshaw, Shaun B and Receveur, V{\'e}ronique and Dobson, Christopher M and Jones, Jonathan A and Smith, Lorna J},
-  journal={Biochemistry},
-  volume={38},
-  number={50},
-  pages={16424--16431},
-  year={1999},
-  publisher={ACS Publications}
-}
 
 @article{volkman2001two,
   title={Two-state allosteric behavior in a single-domain signaling protein},
@@ -127,4 +117,244 @@
   pages={621--631},
   year={2001},
   publisher={Elsevier}
+}
+@article{wilkins1999hydrodynamic,
+  title={Hydrodynamic radii of native and denatured proteins measured by pulse field gradient NMR techniques},
+  author={Wilkins, Deborah K and Grimshaw, Shaun B and Receveur, V{\'e}ronique and Dobson, Christopher M and Jones, Jonathan A and Smith, Lorna J},
+  journal={Biochemistry},
+  volume={38},
+  number={50},
+  pages={16424--16431},
+  year={1999},
+  publisher={ACS Publications}
+}
+@article{kabsch1983dictionary,
+  title={Dictionary of protein secondary structure: pattern recognition of hydrogen-bonded and geometrical features},
+  author={Kabsch, Wolfgang and Sander, Christian},
+  journal={Biopolymers},
+  volume={22},
+  number={12},
+  pages={2577--2637},
+  year={1983},
+  publisher={Wiley Online Library}
+}
+@article{humphrey1996vmd,
+  title={VMD: visual molecular dynamics},
+  author={Humphrey, William and Dalke, Andrew and Schulten, Klaus},
+  journal={Journal of molecular graphics},
+  volume={14},
+  number={1},
+  pages={33--38},
+  year={1996},
+  publisher={Elsevier}
+}
+@article{edgar2004muscle,
+  title={MUSCLE: multiple sequence alignment with high accuracy and high throughput},
+  author={Edgar, Robert C},
+  journal={Nucleic acids research},
+  volume={32},
+  number={5},
+  pages={1792--1797},
+  year={2004},
+  publisher={Oxford Univ Press}
+}
+@article{apweiler2004uniprot,
+  title={UniProt: the universal protein knowledgebase},
+  author={Apweiler, Rolf and Bairoch, Amos and Wu, Cathy H and Barker, Winona C and Boeckmann, Brigitte and Ferro, Serenella and Gasteiger, Elisabeth and Huang, Hongzhan and Lopez, Rodrigo and Magrane, Michele and others},
+  journal={Nucleic acids research},
+  volume={32},
+  number={suppl 1},
+  pages={D115--D119},
+  year={2004},
+  publisher={Oxford Univ Press}
+}
+@article{tompa2012intrinsically,
+  title={Intrinsically disordered proteins: a 10-year recap},
+  author={Tompa, Peter},
+  journal={Trends in biochemical sciences},
+  volume={37},
+  number={12},
+  pages={509--516},
+  year={2012},
+  publisher={Elsevier}
+}
+@article{mittag2007atomic,
+  title={Atomic-level characterization of disordered protein ensembles},
+  author={Mittag, Tanja and Forman-Kay, Julie D},
+  journal={Current opinion in structural biology},
+  volume={17},
+  number={1},
+  pages={3--14},
+  year={2007},
+  publisher={Elsevier}
+}
+@article{kollman2015ring,
+  title={Ring closure activates yeast $\gamma$TuRC for species-specific microtubule nucleation},
+  author={Kollman, Justin M and Greenberg, Charles H and Li, Sam and Moritz, Michelle and Zelter, Alex and Fong, Kimberly K and Fernandez, Jose-Jesus and Sali, Andrej and Kilmartin, John and Davis, Trisha N and others},
+  journal={Nature structural \& molecular biology},
+  volume={22},
+  number={2},
+  pages={132--137},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{mandelkow1995microtubules,
+  title={Microtubules and microtubule-associated proteins},
+  author={Mandelkow, Eckhard and Mandelkow, Eva-Maria},
+  journal={Current opinion in cell biology},
+  volume={7},
+  number={1},
+  pages={72--81},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{radhakrishnan1997solution,
+  title={Solution structure of the KIX domain of CBP bound to the transactivation domain of CREB: a model for activator: coactivator interactions},
+  author={Radhakrishnan, Ishwar and P{\'e}rez-Alvarado, Gabriela C and Parker, David and Dyson, H Jane and Montminy, Marc R and Wright, Peter E},
+  journal={Cell},
+  volume={91},
+  number={6},
+  pages={741--752},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@article{gianni2012folding,
+  title={A folding-after-binding mechanism describes the recognition between the transactivation domain of c-Myb and the KIX domain of the CREB-binding protein},
+  author={Gianni, Stefano and Morrone, Angela and Giri, Rajanish and Brunori, Maurizio},
+  journal={Biochemical and biophysical research communications},
+  volume={428},
+  number={2},
+  pages={205--209},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{wright2009linking,
+  title={Linking folding and binding},
+  author={Wright, Peter E and Dyson, H Jane},
+  journal={Current opinion in structural biology},
+  volume={19},
+  number={1},
+  pages={31--38},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{tompa2008fuzzy,
+  title={Fuzzy complexes: polymorphism and structural disorder in protein--protein interactions},
+  author={Tompa, Peter and Fuxreiter, Monika},
+  journal={Trends in biochemical sciences},
+  volume={33},
+  number={1},
+  pages={2--8},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{graham2001tcf4,
+  title={Tcf4 can specifically recognize $\beta$-catenin using alternative conformations},
+  author={Graham, Thomas A and Ferkey, Denise M and Mao, Feng and Kimelman, David and Xu, Wenqing},
+  journal={Nature Structural \& Molecular Biology},
+  volume={8},
+  number={12},
+  pages={1048--1052},
+  year={2001},
+  publisher={Nature Publishing Group}
+}
+
+@article{fontes2000structural,
+  title={Structural basis of recognition of monopartite and bipartite nuclear localization sequences by mammalian importin-$\alpha$},
+  author={Fontes, Marcos RM and Teh, Trazel and Kobe, Bostjan},
+  journal={Journal of molecular biology},
+  volume={297},
+  number={5},
+  pages={1183--1194},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{bhattacharyya2006ste5,
+  title={The Ste5 scaffold allosterically modulates signaling output of the yeast mating pathway},
+  author={Bhattacharyya, Roby P and Rem{\'e}nyi, Attila and Good, Matthew C and Bashor, Caleb J and Falick, Arnold M and Lim, Wendell A},
+  journal={Science},
+  volume={311},
+  number={5762},
+  pages={822--826},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{zor2002roles,
+  title={Roles of phosphorylation and helix propensity in the binding of the KIX domain of CREB-binding protein by constitutive (c-Myb) and inducible (CREB) activators},
+  author={Zor, Tsaffrir and Mayr, Bernhard M and Dyson, H Jane and Montminy, Marc R and Wright, Peter E},
+  journal={Journal of Biological Chemistry},
+  volume={277},
+  number={44},
+  pages={42241--42248},
+  year={2002},
+  publisher={ASBMB}
+}
+
+@article{yu1994structural,
+  title={Structural basis for the binding of proline-rich peptides to SH3 domains},
+  author={Yu, Hongtao and Chen, James K and Feng, Sibo and Dalgarno, David C and Brauer, Andrew W and Schrelber, Stuart L},
+  journal={Cell},
+  volume={76},
+  number={5},
+  pages={933--945},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{karsenti2001mitotic,
+  title={The mitotic spindle: a self-made machine},
+  author={Karsenti, E and Vernos, I},
+  journal={Science},
+  volume={294},
+  number={5542},
+  pages={543--547},
+  year={2001},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{kubai1976evolution,
+  title={The evolution of the mitotic spindle},
+  author={Kubai, Donna F},
+  journal={International review of cytology},
+  volume={43},
+  pages={167--227},
+  year={1976},
+  publisher={Elsevier}
+}
+
+@article{dogterom2005force,
+  title={Force generation by dynamic microtubules},
+  author={Dogterom, Marileen and Kerssemakers, Jacob WJ and Romet-Lemonne, Guillaume and Janson, Marcel E},
+  journal={Current opinion in cell biology},
+  volume={17},
+  number={1},
+  pages={67--74},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{joshi1992gamma,
+  title={$\gamma$-Tubulin is a centrosomal protein required for cell cycle-dependent microtubule nucleation},
+  author={Joshi, Harish C and Palacios, Monica J and McNamara, Leemore and Cleveland, Don W},
+  year={1992},
+  publisher={Nature Publishing Group}
+}
+
+@article{kollman2011microtubule,
+  title={Microtubule nucleation by $\gamma$-tubulin complexes},
+  author={Kollman, Justin M and Merdes, Andreas and Mourey, Lionel and Agard, David A},
+  journal={Nature reviews Molecular cell biology},
+  volume={12},
+  number={11},
+  pages={709--721},
+  year={2011},
+  publisher={Nature Publishing Group}
 }
