--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -83,7 +83,7 @@
 \Acknowledge%
 
 \SetContributionName{\MakeUppercase{Contribution of Authors}}%
-\SetContributionText{All data collection and results obtained during my M.Sc. are presented here as a standard format thesis. This work includes results and figures obtained by collaborators in the Department of Chemistry Dr. Anthony Mittermaier and Jason Harris who conducted NMR experiments. All computer simulation work was done by myself. All text and literature review in this thesis was done by myself with feedback from my supervisor Jackie Vogel. Figures were prepared in collaboration with Jackie Vogel. }%
+\SetContributionText{All data collection and results obtained during my M.Sc. are presented here as a standard format thesis. This work includes results and figures obtained by collaborators in the Department of Chemistry Dr. Anthony Mittermaier and Jason Harris who conducted NMR experiments and generated all NMR based figures. All computer simulation work and MD figures were done by myself. All text and literature review in this thesis was done by myself with feedback from my supervisor Jackie Vogel and collaborator Anthony Mittermaier. }%
 \Contribution%
 
 
