--- a/introduction.tex
+++ b/introduction.tex
@@ -34,40 +34,39 @@ A key aspect of dynamic control is the ability to modulate function in a precise
 
 {\it Disorder-Order transitions}
 
-The best explored physical mechanism of IDP function is the fold-on binding paradigm. In this case, IDPs in the free form are unstructured, and when they encounter their binding target, they undergo a folding transition (disorder to order) to form a stable complex. The lack of structure in the unbound state allows the the IDP to recognize multiple targets, and it allows binding to be inducible instead of constitutive. A well studied example of this kind of mechanism is the binding of the transcriptional activator protein CREB and its co-activator CBP. An IDR in CREB known as KID mediates binding to CBP where upon binding, the IDP folds into a pair of helices. However, this binding process is not favoured spontaneously due to loss of entropy induced by folding. \footnote{We consider the expression for Gibbs free energy, $\Delta G = \Delta H - T\Delta S$, where $\Delta H$ is the change in enthalpy, or heat energy available to the system, and $\Delta S$ is the entropy, or degree of disorder/conformational freedom available to the system. If we define our system as a protein chain, we see that a decrease in entropy which can be brought upon by the ordering of a structure will result in a positive $\Delta G$ thus making the reaction energetically unfavourable. This loss of entropy, or conformational freedom, can be overcome by a release of heat, or a sufficiently negative $\Delta H$ component which can tip the energetic balance toward $\Delta G < 0$. One might say that the decrease in entropy in the protein would be in violation of the second law of thermodynamics which states that all systems tend toward an increase in entropy. However, a reaction with a negative $\Delta H$, in other words, a reaction releasing heat will cause an increase in entropy to its surrounding environment. In the case of protein, the process of folding will reduce the entropy of the protein, but if the folding has a negative $\Delta H$ it will release heat and thus increase the entropy of the water molecules surrounding it.}However, when the KID is phosphorylated, the phosphoryl group interacts with CBP by forming hydrogen bonds which result in a negative enthalpic change that compensates for the loss of entropy and thus makes the folding reaction favourable. Because of the inducible nature of this interaction, CBP is able to also interact with other co-factors, which has been reported in the literature. \cite{radhakrishnan1997solution} This is an example of how even though the association state of the IDP is ordered, it is  the intrinsic disorder and entropy of the unbound state which acts as a tool for controlling the interaction. \\
+The best explored physical mechanism of IDP function is the fold-on binding paradigm ~\cite{wright2009linking}. In this case, IDPs in the free form are unstructured, and when they encounter their binding target, they undergo a folding transition (disorder to order) to form a stable complex. The lack of structure in the unbound state allows the the IDP to recognize multiple targets, and it allows binding to be inducible instead of constitutive. A well studied example of this kind of mechanism is the binding of the transcriptional activator protein CREB and its co-activator CBP ~\cite{gianni2012folding}. An IDR in CREB known as KID mediates binding to CBP where upon binding, the IDP folds into a pair of helices. However, this binding process is not favoured spontaneously due to loss of entropy induced by folding. \footnote{We consider the expression for Gibbs free energy, $\Delta G = \Delta H - T\Delta S$, where $\Delta H$ is the change in enthalpy, or heat energy available to the system, and $\Delta S$ is the entropy, or degree of disorder/conformational freedom available to the system. If we define our system as a protein chain, we see that a decrease in entropy which can be brought upon by the ordering of a structure will result in a positive $\Delta G$ thus making the reaction energetically unfavourable. This loss of entropy, or conformational freedom, can be overcome by a release of heat, or a sufficiently negative $\Delta H$ component which can tip the energetic balance toward $\Delta G < 0$. One might say that the decrease in entropy in the protein would be in violation of the second law of thermodynamics which states that all systems tend toward an increase in entropy. However, a reaction with a negative $\Delta H$, in other words, a reaction releasing heat will cause an increase in entropy to its surrounding environment. In the case of protein, the process of folding will reduce the entropy of the protein, but if the folding has a negative $\Delta H$ it will release heat and thus increase the entropy of the water molecules surrounding it.}However, when the KID is phosphorylated, the phosphoryl group interacts with CBP by forming hydrogen bonds which result in a negative enthalpic change that compensates for the loss of entropy and thus makes the folding reaction favourable. Because of the inducible nature of this interaction, CBP is able to also interact with other co-factors, which has been reported in the literature \cite{radhakrishnan1997solution}. This is an example of how even though the association state of the IDP is ordered, it is  the intrinsic disorder and entropy of the unbound state which acts as a tool for controlling the interaction. \\
 
 
 \pagebreak
 
 {\it \lq Fuzzy\rq interactions}
 
-\par Disorder to order transitions are not necessary for IDPs to confer functionality. There is a growing number of examples where IDPs are involved in functional interactions while remaining in a disordered state \cite{tompa2008fuzzy}. Such interactions have been labeled with the term \lq fuzzy\rq as they maintain a heterogenous conformational ensemble throughout their lifetimes. There exist various physical mechanisms by which fuzziness, or disorder, in binding interactions confers advantages to protein function. For example, binding interactions between an IDP and a target protein where the IDP is able to form alternate contacts with its binding target can help reduce the entropic cost of binding, as well as control the accessibility of different sites on the protein for modulating interactions with different targets. \cite{graham2001tcf4, fontes2000structural} IDPs can also play a role in interactions without making direct contacts with the binding partner.  IDPs can act as flexible linkers for folded domains \cite{bhattacharyya2006ste5}, or as \lq antennae\rq for \cite{sigalov2004homooligomerization} recruiting further interactiors and stabilizing the binding of folded domains through long range interactions \cite{zor2002roles, yu1994structural} \todo{paragraph feels too compact}
+\par Disorder to order transitions are not necessary for IDPs to confer functionality. There is a growing number of examples where IDPs are involved in functional interactions while remaining in a disordered state \cite{tompa2008fuzzy}. Such interactions have been labeled with the term \lq fuzzy\rq as they maintain a heterogenous conformational ensemble throughout their lifetimes. There exist various physical mechanisms by which fuzziness, or disorder, in binding interactions confers advantages to protein function. For example, binding interactions between an IDP and a target protein where the IDP is able to form alternate contacts with its binding target can help reduce the entropic cost of binding, as well as control the accessibility of different sites on the protein for modulating interactions with different targets. \cite{graham2001tcf4, fontes2000structural} IDPs can also play a role in interactions without making direct contacts with the binding partner.  IDPs can act as flexible linkers for folded domains \cite{bhattacharyya2006ste5}, or as \lq antennae\rq for \cite{sigalov2004homooligomerization} recruiting further interactiors and stabilizing the binding of folded domains through long range interactions \cite{zor2002roles, yu1994structural} 
 
 It is becoming increasingly evident that nature is able to harness disorder as an adaptive mechanism for control in protein-function. Flexibility in conformational state allows cellular processes to greatly expand the functional repertoire of proteins by allowing for rapid switch-like control over interactions, expanding the functional repertoire of proteins, and fine-tuning the kinetics of interactions.  It is due to all of these various physical mechanisms that the cell is able to carry out its complex tasks with such robustness and precision. Advances in this field have caused us to reconsider the  \lq one structure, one function\rq paradigm that has prevailed in structural biology for decades. However, this remains a relatively novel area of structural biology, and there still remain many unsolved physical mechanisms in IDPs.
 
 \section{IDP function in the mitotic spindle}
  
-In this section we will address the role of IDPs in controlling the function of the mitotic spindle. The mitotic spindle is a complex molecular machine composed of microtubules, force generators, chromosomes, and numerous effector molecules which act in a coordinated manner to accomplish the process of chromosome segregation during cell division. This process ensures that genetic material is transferred from the mother to the daughter cell in a timely manner and without errors which would in most cases result in lethality. Because cell division is a fundamental task in every cell's lifetime, mitotic spindles share common design features throughout eukaryotes. The task of properly arranging and segregating chromosomes is effected ultimately by filament-like polymers known as microtubules which attach to chromosomes and physically pull the DNA to the daughter cell. In order to study the underlying mechanisms at play, we work with the mitotic spindle of the budding yeast {\it Saccharomyces cerevisiae} due to its minimal, yet highly conserved construction. 
+In this section we will address the role of IDPs in controlling the function of the mitotic spindle. The mitotic spindle is a complex molecular machine composed of microtubules, force generators, chromosomes, and numerous effector molecules which act in a coordinated manner to accomplish the process of chromosome segregation during cell division ~\cite{karsenti2001mitotic}. This process ensures that genetic material is transferred from the mother to the daughter cell in a timely manner and without errors which would in most cases result in lethality. Because cell division is a fundamental task in every cell's lifetime, mitotic spindles share common design features throughout eukaryotes ~\cite{kubai1976evolution}. The task of properly arranging and segregating chromosomes is effected ultimately by filament-like polymers known as microtubules which attach to chromosomes and physically pull the DNA to the daughter cell. In order to study the underlying mechanisms at play, we work with the mitotic spindle of the budding yeast {\it Saccharomyces cerevisiae} due to its minimal, yet highly conserved construction. 
 
 \subsection{Microtubules}
 
-Microtubules are constructed of alternating pairs, or dimers, of the globular proteins $\alpha$ and $\beta$ Tubulin. A cylindrical arrangement of tubulin dimers results in the formation of a rigid tube-like structure known as a microtubule. By growing, or polymerizing, and shrinking, depolymerizing, microtubules can effect force on a target. Microtubules are involved in a number of other functions, such as serving as roadways along which transport molecules can carry cargo, and forming the structural backbone of the cell. The spontaneous assembly of tubulin dimers in solution into a microtubule is heavily disfavoured. However, when free floating tubulins encounter pre-formed ring of tubulin molecules, the growth of a microtubule is greatly facilitated. In cells, this template is known as the $\gamma$-Tubulin Ring Complex ($\gamma$-TuRC) which is a ring-like assembly of $\gamma$-Tubulin molecules held together by various other proteins known as $\gamma$-tubulin ring proteins (GRIPs). $\gamma$ tubulin shares a similar structure to $\alpha$ and $\beta$ tubulin and have been shown to act as nucleation templates for microtubules. Furthermore, structural rearrangements of the $\gamma$-TuRC have been shown to either facilitate and inhibit nucleation. 
+Microtubules are constructed of alternating pairs, or dimers, of the globular proteins $\alpha$ and $\beta$ Tubulin. A cylindrical arrangement of tubulin dimers results in the formation of a rigid tube-like structure known as a microtubule. By growing, or polymerizing, and shrinking, depolymerizing, microtubules can effect force on a target ~\cite{dogterom2005force}. Microtubules are involved in a number of other functions, such as serving as roadways along which transport molecules can carry cargo, and forming the structural backbone of the cell. The spontaneous assembly of tubulin dimers in solution into a microtubule is heavily disfavoured. However, when free floating tubulins encounter pre-formed ring of tubulin molecules, the growth of a microtubule is greatly facilitated ~\cite{joshi1992gamma}. In cells, this template is known as the $\gamma$-Tubulin Ring Complex ($\gamma$-TuRC) which is a ring-like assembly of $\gamma$-Tubulin molecules held together by various other proteins known as $\gamma$-tubulin ring proteins (GRIPs). $\gamma$ tubulin shares a similar structure to $\alpha$ and $\beta$ tubulin and have been shown to act as nucleation templates for microtubules when assembled in a ring complex ~\cite{kollman2011microtubule}. Furthermore, structural rearrangements of the $\gamma$-TuRC have been shown to either facilitate and inhibit nucleation ~\cite{kollman2015ring}. 
 
 \subsection{$\gamma$-Tubulin \& the $\gamma$-CT}
 
-For many years, microtubule nucleation was thought to be the sole function of $\gamma$ tubulin. However, in 2001, a mass spectrometry study of the yeast $\gamma$-Tubulin showed that the protein is phosphorylated {\it in vivo} at 8 sites. Several functional studies following up on the finding that $\gamma$-tubulin is regulated show that mutations altering phosphorylation sites, all of which lie in IDRs, have consequences on the organization and stability of microtubules but no effect on their nucleation.  
+For many years, microtubule nucleation was thought to be the sole function of $\gamma$ tubulin. This view began to change after a mass spectrometry study published in 2001 of the yeast $\gamma$-Tubulin showed that the protein is phosphorylated {\it in vivo} at 8 sites. Several functional studies following up on the finding that $\gamma$-tubulin is regulated show that mutations altering phosphorylation sites, all of which lie in IDRs, have consequences on the organization and stability of microtubules but no effect on their nucleation. This opens a relatively unexplored field of functional coupling where the $\gamma$-TuRC acts not only as a microtubule nucleator, but as a signal integration hub for regulating downstream events in microtubule organization.
 
-One of the best studied phosphorylation sites in $\gamma$-Tubulin is the heavily conserved Tyrosine (Y) 445 which lies in the disordered carboxyl terminal tail of $\gamma$-Tubulin (\gct).  The \gct{} is defined as the final 35 residues in the C-terminal portion of $\gamma$-Tubulin, which lie outside of the folded globular domain, and has been shown to be essential for survival in {\it S. cerevisiae} ~\cite{vogel2000carboxy}. Substitution of an Aspartic Acid (D) residue in the place of Y445, making the Y445D mutant, results in slow growing cells with unstable and misaligned mitotic spindles ~\cite{vogel2001phosphorylation}. The aspartic acid substitution is used as a controllable means for recreating the electrostatic environment of a phosphate group by introducing a negative charge. These findings suggest that $\gamma$-Tubulin is playing a role outside of its canonical function of nucleation and is coordinating the dynamics of the mitotic spindle. However, very little is known about the interactions and physical mechanisms that phosphorylation at Y445 affect. The coupling of post-translational modifications (PTMs) to the C-terminal tails of tubulins has been described in the $\gamma$-tubulin orthologues $\alpha$ and $\beta$ tubulin. Specific combinations of PTMs on the tubulin tails act as a \lq tubulin code\rq for recruiting motor proteins and microtubule associated proteins to the microtubule lattice. \todo{a bit more on beta tubulin}A similar code has not yet been described for $\gamma$-Tubulin.  While the functional importance of phosphorylation and IDRs in $\gamma$-Tubulin is becoming increasingly clear, the physical mechanisms by which local modifications at IDRs can have global impacts on the large molecular machine remain unstudied. 
+One of the best studied phosphorylation sites in $\gamma$-Tubulin is the heavily conserved Tyrosine (Y) 445 which lies in the disordered carboxyl terminal tail of $\gamma$-Tubulin (\gct).  The \gct{} is defined as the final 35 residues in the C-terminal portion of $\gamma$-Tubulin, which lie outside of the folded globular domain. The \gct has been shown to be essential for survival in {\it S. cerevisiae} when cleaved ~\cite{vogel2000carboxy}. Substitution of an Aspartic Acid (D) residue in the place of Y445, making the Y445D mutant, results in slow growing cells with unstable and misaligned mitotic spindles ~\cite{vogel2001phosphorylation}. The aspartic acid substitution is used as a controllable means for recreating the electrostatic environment of a phosphate group by introducing a negative charge. These findings suggest that $\gamma$-Tubulin is playing a role outside of its canonical function of nucleation and is coordinating the dynamics of the mitotic spindle. However, very little is known about the interactions and physical mechanisms that phosphorylation at Y445 affect. The coupling of post-translational modifications (PTMs) to the C-terminal tails of tubulins is well described in the $\gamma$-tubulin orthologues $\alpha$ and $\beta$ tubulin. Specific combinations of PTMs on the tubulin tails act as a \lq tubulin code \rq for selectively recruiting motor proteins and microtubule associated proteins to the microtubule lattice. A similar code has not yet been described for $\gamma$-Tubulin despite evidence that is is regulated \vivo.  While the functional importance of phosphorylation and IDRs in $\gamma$-Tubulin is becoming increasingly clear, the physical mechanisms by which local modifications at IDRs can have global impacts on the large molecular machine remain unstudied. 
  
  \section{Experimental question}
  
- We hypothesize that the addition of a negative charge at the position Y445 in the \gct{} alters the conformational sampling of the disordered tail in such a way as to be able to regulate the function of the complex.  
+ We hypothesize that the addition of a negative charge at the position Y445 (Y11 for the polypeptide in isolation) in the \gct alters the conformational sampling of the disordered tail in such a way as to be able to regulate the function of the complex.  
  
  \section{Approach}
  
-In order to detect the rapid changes in conformational sampling, we use a powerful computational technique known as Molecular Dynamics (MD) simulations. We will be simulating the dynamics of two forms of the \gct{}: WT, and Y445D. We will perform simulations on the \gct in isolation as well as in the presence of the entire $\gamma$-Tubulin protein. \todo{should I bring up NMR here?}
+In order to detect the rapid changes in conformational sampling, we use a powerful computational technique known as Molecular Dynamics (MD) simulations. We will be simulating the dynamics of two forms of the \gct: WT, and Y11D. We will perform simulations on the \gct in isolation as well as in the presence of the entire $\gamma$-Tubulin protein.
 
-\todo{Notes from jackie: keep REMD in discussion as possible method. Tony says REMD more for overcoming enthalpies not entropic barriers so not good for IDPs. Need to sample for longer to see changes.}
  
  
  
